--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <body>
         <h1>Hello world!</h1>
 
+        <img src="20210812_154948.jpg">
+
             <p>Hello everyone this is
         
-        my paragraph.</p>
+        my paragraph. Images do not have an end tag.</p>
 
             <h2>Section 1</h2>
 
