--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <img src="20210812_154948.jpg">
 
+        This is the <a href="https://code.visualstudio.com/">text editer</a> I am using.
+
             <p>Hello everyone this is
         
         my paragraph. Images do not have an end tag.</p>
@@ -32,6 +34,8 @@
             <li>Third number</li>
         
         </ol>
+
+        <p>Click <a href="about.html">here</a> to learn more about me.</p>
 
         <marquee>This is not recomended to use cause some browsers to not support it.</marquee>
 
