--- a/about.html
+++ b/about.html
@@ -11,16 +11,18 @@
         
         <h2>Me</h2>
 
-        <p>This is how to make a numbered list insead. Change from unorder list (ul) to ordered list (ol).</p>
+        <p>Here are some things about me.</p>
 
         <ol>
-            <li>First number</li>
-            <li>Second number</li>
-            <li>Third number</li>
+            <li>I like to travel</li>
+            <li>I am getting my Ph.D. in Neuroscience</li>
+            <li>I live in a <a href="tiny.html">tiny house</a></li>
         
         </ol>
 
         <p>Click <a href="index.html">here</a> to go back to home page.</p>
+
+        <img src="FB_IMG_1628878200094.jpg">
 
     </body>
 </html>
