--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <h2>Section 2</h2>
 
+        
+
         <p>This is how to make a numbered list insead. Change from unorder list (ul) to ordered list (ol).</p>
 
         <ol>
@@ -35,7 +37,7 @@
         
         </ol>
 
-        <p>Click <a href="about.html">here</a> to learn more about me.</p>
+        <p>Click <a href="about.html">here</a> to learn more about me, or <a href="tiny.html">here</a> to see my tiny house.</p>
 
         <marquee>This is not recomended to use cause some browsers to not support it.</marquee>
 
